# NetworkTestingSystem

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  main.cpp
Client/include/: Client.hpp
Client/lib/: Client.cpp
GUI/: CMakeLists.txt  main.cpp
GUI/include/: GUI_Window.h
GUI/lib/: GUI_Window.cpp
Server/: CMakeLists.txt  main.cpp
Server/include/: Server.hpp
Server/lib/: Server.cpp
TestConfigs/: KnowledgeTest.json
TestSystem/: CMakeLists.txt  example.json  main.cpp
TestSystem/include/: TestSystem.h
TestSystem/lib/: TestSystem.cpp
